# TITANIUM_ENGINE

./: .gitignore  CMakeLists.txt  README.md  run.sh
include/titanium/: order.hpp  order_book.hpp  trade_event.hpp  trade_logger.hpp  trade_logger_file.hpp
include/titanium/utils/: rdtsc.hpp  rdtsc_calibration.hpp
src/: order_book.cpp  trade_event.cpp  trade_logger_file.cpp
src/utils/: rdtsc.cpp  rdtsc_calibration.cpp
test/: basic_test.cpp  test_trade_replay.cpp
tools/: trade_replay.cpp  trade_replay.hpp
tools/opencv/: book_visualizer.cpp  book_visualizer.hpp  opencv_test.cpp
